--- a/_frontend/_engine/style.sass
+++ b/_frontend/_engine/style.sass
@@ -3,8 +3,9 @@
 @import "_standart"
 @import "_print"
 
-@import "_col"
+@import "container"
 @import "_css"
+
 
 @import "blocks/nav"
 @import "blocks/icon"
