--- a/_frontend/blocks/cheese/style.sass
+++ b/_frontend/blocks/cheese/style.sass
@@ -1,7 +1,7 @@
 .cheese
 	margin-bottom: 150px
 	position: relative
-	@include media(l)
+	@include media(lg)
 		margin-bottom: 70px
 
 	&:before 
@@ -93,7 +93,7 @@
 		justify-content: space-between
 	&__item 
 		width: 48%
-		@include media(l)
+		@include media(lg)
 			width: 100%
 	&__link 
 		position: relative
@@ -101,7 +101,7 @@
 		line-height: 24px
 		color: #000
 		text-decoration: none
-		@include media(l)
+		@include media(lg)
 			font-size: 20px
 			line-height: 30px
 
