--- a/_frontend/blocks/product-day/style.scss
+++ b/_frontend/blocks/product-day/style.scss
@@ -16,7 +16,7 @@
         &_images {
             max-height: 320px;
                       
-            @include media(l){
+            @include media(lg){
                 max-height: none;
                 text-align: center;
                 padding: 20px;
@@ -26,7 +26,7 @@
                 top: -25px;
                 left: 10px;
                 width: 65%;
-                @include media(l){
+                @include media(lg){
                     top: auto;
                     left: auto;
                     width: auto;
@@ -40,7 +40,7 @@
             max-width: 195px;
             padding-right: 20px;
             
-            @include media(l) {
+            @include media(lg) {
                 position: relative;
                 left: auto; top: auto;
                 padding: 20px;
