--- a/_frontend/blocks/slider/style.scss
+++ b/_frontend/blocks/slider/style.scss
@@ -24,7 +24,7 @@
         align-items: flex-end;
         padding: 150px 0 50px;
         
-        @include media(l){
+        @include media(lg){
             padding-top: 150px
         }
 
@@ -35,7 +35,7 @@
             border-radius: 10px;
             color: #fff;
             
-            @include media(l) {
+            @include media(lg) {
                 max-width: none;
             }
             
@@ -54,7 +54,7 @@
             display: inline-block;
             margin-right: 40px;
             margin-bottom: 30px;
-            @include media(l){
+            @include media(lg){
                 margin-right: 0
             }
         }
