--- a/_frontend/_variables.scss
+++ b/_frontend/_variables.scss
@@ -2,9 +2,6 @@
 $font:          'PFBeauSansPro', sans-serif;
 $font-2:        'Museo';
 
-$font-path:        '../fonts' !default;
-$font-path-name:   '' !default;
-
 $font-size:                    14px         !default;
 $font-size-mini:               0.7142em     !default;
 $font-size-small:              0.8571em     !default;
@@ -29,6 +26,39 @@ $color-link:                    inherit;
 $color-link-hover:              #ce0018;
 
 $background:                    #fff;
+
+$status: (
+  '': (
+    #888,
+    #979797,
+  ),
+  primary:    (
+    #f96332,
+    #fa7a50,
+  ),
+  info:        (
+    #2CA8FF,
+    #4bb5ff
+  ),
+  success:     (
+    #18ce0f,
+    #1beb11
+  ),
+  warning:     (
+    #FFB236,
+    #f96332
+  ),
+  danger:      (
+    #FF3636,
+    #f96332
+  ),
+);
+
+$color-primary:                 #f96332;
+$color-info:                    #2CA8FF;
+$color-success:                 #18ce0f;
+$color-warning:                 #FFB236;
+$color-danger:                  #FF3636;
 
 
 
