page of category

--- a/_frontend/blocks/style.scss
+++ b/_frontend/blocks/style.scss
@@ -17,3 +17,8 @@
 @import "recommendation/style";
 @import "back-img/style";
 @import "menu-site-map/style";
+
+
+@import "header-background/style";
+@import "category-carousel/style";
+@import "products-block/style";
