--- a/style.css
+++ b/style.css
@@ -2624,40 +2624,5 @@ input[type="text"]:focus {
     .menu-site-map__nav li {
       width: 100%; } }
 
-.product-category-header {
-  background: url("../images/product/header-product-category.png") no-repeat center, url("../images/product/header-product-category2.png") no-repeat center, url("../images/product/header-product-category3.png") no-repeat center, url("../images/product/header-product-category4.png") no-repeat center;
-  -webkit-background-size: cover, cover, cover, cover;
-          background-size: cover, cover, cover, cover; }
-
-.category-carousel {
-  margin-right: 32px;
-  margin-bottom: 60px; }
-
-.category-carousel__item {
-  height: 122px;
-  margin: auto;
-  text-align: center; }
-
-.category-carousel .arrows--next {
-  right: -40px; }
-
-.category-carousel .arrows--prev {
-  left: -40px; }
-
-.products-block {
-  padding-top: 60px; }
-
-.products-block__item {
-  height: 375px;
-  text-align: center;
-  overflow: hidden; }
-  .products-block__item h3 {
-    color: #0a0a0a;
-    font-weight: 600;
-    line-height: 24px; }
-
-.products-block__art {
-  color: #0a0a0a;
-  font-size: 14px;
-  font-style: italic;
-  line-height: 28px; }
+.slider {
+  top: 100px; }
