--- a/_frontend/blocks/style.scss
+++ b/_frontend/blocks/style.scss
@@ -1,8 +1,10 @@
 @import "header/style";
 @import "footer/style";
+@import "_element/style";
 @import "button/style";
 @import "slider/style";
 @import "cheese/style";
+@import "search/style";
 
 
 @import "filter/style";
