--- a/_frontend/blocks/filter/style.scss
+++ b/_frontend/blocks/filter/style.scss
@@ -1,10 +1,17 @@
 .filter {
   &__title {
-
+    font-size: 20px;
+    line-height: 22px;
+    font-weight: bold;
+    padding-right: 40px;
+    margin-bottom: 20px;
   }
   &__item {
     &__name {
-    margin-top: 15px;
+      margin-top: 15px;
+      font-size: 15px;
+      line-height: 18px;
+      font-weight: bold;
     }
     &__secect {
 
