--- a/_frontend/blocks/products-block/style.scss
+++ b/_frontend/blocks/products-block/style.scss
@@ -1,22 +1,59 @@
 .products-block {
     padding-top: 60px;
-}
-
-.products-block__item {
-    height: 375px;
-    text-align: center;
-    overflow: hidden;
-    h3 {
-        color: #0a0a0a;
-        font-weight: 600;
-        line-height: 24px;
-
+    &__wrap-item {
+        height: 328px;
+        overflow: hidden;
+        position: relative;
     }
-}
 
-.products-block__art {
-    color: #0a0a0a;
-    font-size: 14px;
-    font-style: italic;
-    line-height: 28px;
+    &__item {
+        height: 328px;
+        overflow: hidden;
+        padding: 34px 0 40px;
+        text-align: center;
+        cursor: pointer;
+        color: #979695;
+        background-color: #fff;
+        &__image {
+            width: 206px;
+            height: 159px;
+            margin: auto;
+        }
+        &__name {
+            color: #0a0a0a;
+            font-size: 20px;
+            font-weight: 600;
+            line-height: 24px;
+            margin-top: 30px;
+            margin-bottom: 8px;
+        }
+        &__art {
+            color: #0a0a0a;
+            font-size: 14px;
+            font-style: italic;
+            margin-bottom: 8px;
+        }
+        &__description {
+            visibility: hidden;
+        }
+        &:hover {
+            position: absolute;
+            z-index: 9;
+            height: auto;
+
+        }
+        &:hover &__description {
+            visibility: visible;
+        }
+        &__sort {
+            margin-bottom: 5px;
+        }
+        &__sort-fat {
+            margin-bottom: 7px;
+        }
+        &__text {
+            line-height: 18px;
+            margin-bottom: 0;
+        }
+    }
 }
