--- a/_frontend/blocks/products-block/style.scss
+++ b/_frontend/blocks/products-block/style.scss
@@ -8,12 +8,12 @@
     &__item {
         height: 328px;
         overflow: hidden;
-        padding: 34px 0 40px;
+        padding: 34px 10px 40px;
         text-align: center;
         cursor: pointer;
         color: #979695;
         background-color: #fff;
-        border-radius: 5px;
+        border-radius: 10px;
         transition: all .2s;
         &__image {
             width: 206px;
