--- a/_frontend/blocks/style.scss
+++ b/_frontend/blocks/style.scss
@@ -24,3 +24,5 @@
 @import "header-background/style";
 @import "category-carousel/style";
 @import "products-block/style";
+@import "product-pagination/style";
+@import "tm-carousel/style";
