--- a/_frontend/blocks/products-block/style.scss
+++ b/_frontend/blocks/products-block/style.scss
@@ -1,10 +1,20 @@
 .products-block {
     padding-top: 60px;
+    @include media(lg){
+        padding-top: 0;
+    }
     &__wrap-item {
         height: 328px;
         position: relative;
+        float: left;
+        width: 33%;
+        @include media(lg){
+            width: 50%;
+        }
+        @include media(sm){
+            width: 100%;
+        }
     }
-
     &__item {
         height: 328px;
         overflow: hidden;
