Обновление скрипта сыра и спинера

--- a/_frontend/blocks/cheese/style.sass
+++ b/_frontend/blocks/cheese/style.sass
@@ -238,8 +238,7 @@ $width: 1000px
 		opacity: 0.5
 
 		cursor: pointer
-		&.hover,
-		&.active
+		&.hover
 			opacity: 1
 
 		&[data-number='item1']
