Обновление скрипта сыра и спинера

--- a/_frontend/blocks/cheese/style.sass
+++ b/_frontend/blocks/cheese/style.sass
@@ -160,12 +160,12 @@ $width: 1000px
 		top: 965px
 		height: 232px
 
-	.circle,
+	.bg,
 	.green,
 	.shadow
 		position: absolute
 		@include bg()
-	.circle,
+	.bg,
 	.shadow
 		top: 0
 		bottom: 0
@@ -183,7 +183,7 @@ $width: 1000px
 	.green
 		background-image: url("../images/cheese/green.png")
 
-	.circle
+	.bg
 		background-image: url("../images/cheese/cheese.png")
 
 	.piece
