--- a/_frontend/blocks/tm-carousel/style.scss
+++ b/_frontend/blocks/tm-carousel/style.scss
@@ -7,7 +7,7 @@
         font-weight: 700;
     }
     &__carousel {
-        margin: 30px auto;
+        margin: 30px auto 60px;
         &__item {
             padding: 14px 0;
             height: 100px;
