--- a/css/style.css
+++ b/css/style.css
@@ -2596,10 +2596,22 @@ input[type="text"]:focus {
     .menu-site-map__nav li {
       width: 100%; } }
 
-.product-category-header {
-  background: url("../images/product/header-product-category.png") no-repeat center, url("../images/product/header-product-category2.png") no-repeat center, url("../images/product/header-product-category3.png") no-repeat center, url("../images/product/header-product-category4.png") no-repeat center;
-  -webkit-background-size: cover, cover, cover, cover;
-          background-size: cover, cover, cover, cover; }
+.product-category-header-1 {
+  position: absolute;
+  z-index: -1;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: url("../images/product/header-product-category.png") no-repeat center;
+  -webkit-background-size: cover;
+          background-size: cover;
+  opacity: .7; }
+
+.product-category-header-2 {
+  background: url("../images/product/header-product-category2.png") no-repeat center, url("../images/product/header-product-category3.png") no-repeat center, url("../images/product/header-product-category4.png") no-repeat center;
+  -webkit-background-size: cover, cover, cover;
+          background-size: cover, cover, cover; }
 
 .category-carousel {
   margin-right: 32px;
