--- a/_frontend/blocks/header-background/style.scss
+++ b/_frontend/blocks/header-background/style.scss
@@ -16,3 +16,9 @@
     url('../images/product/header-product-category4.png') no-repeat center;
     background-size: cover, cover, cover;
 }
+
+.product-page-header {
+    background: url('../images/product/header-product-category.png') no-repeat center,
+    url('../images/product/header-product-category4.png') no-repeat center;
+    background-size: cover, cover;
+}
