--- a/_frontend/blocks/style.scss
+++ b/_frontend/blocks/style.scss
@@ -27,3 +27,4 @@
 @import "product-pagination/style";
 @import "tm-carousel/style";
 @import "background-page-category/style";
+@import "bread-crumbs/style";
