--- a/_frontend/blocks/style.scss
+++ b/_frontend/blocks/style.scss
@@ -28,3 +28,6 @@
 @import "tm-carousel/style";
 @import "background-page-category/style";
 @import "bread-crumbs/style";
+@import "analog-carousel/style";
+@import "block-product-img/style";
+@import "block-product-text/style";
