--- a/_frontend/blocks/_element/style.scss
+++ b/_frontend/blocks/_element/style.scss
@@ -1,13 +1,19 @@
 .element {
-  &__title__h1 {
-    font-size: 45px;
-    font-weight: 800;
-    line-height: 53px;
-    margin-bottom: 20px;
-    text-align: center;
-    color: #f6cc49;
-  }
-  &__description{
+    &__title__h1 {
+        font-size: 45px;
+        font-weight: 800;
+        line-height: 53px;
+        margin-bottom: 20px;
+        text-align: center;
+        color: #f6cc49;
+    }
+    &__description {}
+}
 
-  }
+.h1-product-page {
+    margin: 15px auto 34px;
+    color: #292929;
+    font-size: 40px;
+    font-weight: 700;
+    line-height: 40px;
 }
