--- a/_frontend/blocks/style.scss
+++ b/_frontend/blocks/style.scss
@@ -31,3 +31,4 @@
 @import "analog-carousel/style";
 @import "block-product-img/style";
 @import "block-product-text/style";
+@import "product-use-carousel/style";
