made page product

--- a/_frontend/blocks/block-product-img/style.scss
+++ b/_frontend/blocks/block-product-img/style.scss
@@ -64,6 +64,7 @@
     }
     &__description {
         font-weight: 600;
+        margin-bottom: 30px;
         &__h2 {
             margin: 35px 0 25px;
             color: #0a0a0a;
