--- a/_frontend/blocks/style.scss
+++ b/_frontend/blocks/style.scss
@@ -32,3 +32,4 @@
 @import "block-product-img/style";
 @import "block-product-text/style";
 @import "product-use-carousel/style";
+@import "background-page-product/style";
