--- a/_frontend/blocks/clients-carousel/style.scss
+++ b/_frontend/blocks/clients-carousel/style.scss
@@ -36,6 +36,10 @@
 }
 
 .clients-page-product {
-    padding: 100px 0 120px;
+    padding: 75px 0 100px;
     background: transparent;
+    .clients__title {
+        font-size: 40px;
+        margin-bottom: 35px;
+    }
 }
