--- a/_frontend/blocks/clients-carousel/style.scss
+++ b/_frontend/blocks/clients-carousel/style.scss
@@ -43,3 +43,13 @@
         margin-bottom: 35px;
     }
 }
+
+@media only screen and (max-width: 992px) {
+
+    .arrows--next {
+        right: -20px;
+    }
+    .arrows--prev {
+        left: -20px;
+    }
+}
