--- a/css/style.css
+++ b/css/style.css
@@ -2011,6 +2011,12 @@ input[type="text"]:focus {
     font-size: 40px;
     margin-bottom: 35px; }
 
+@media only screen and (max-width: 992px) {
+  .arrows--next {
+    right: -20px; }
+  .arrows--prev {
+    left: -20px; } }
+
 .popular {
   position: relative;
   padding-bottom: 50px; }
