--- a/_frontend/blocks/footer/style.scss
+++ b/_frontend/blocks/footer/style.scss
@@ -69,7 +69,8 @@
     }
 
     .button-cheese span {
-
+        padding-left: 40px;
+        padding-right: 40px;
         color: #694c3d;
         svg {
             fill: #694c3d;
