--- a/_frontend/blocks/style.scss
+++ b/_frontend/blocks/style.scss
@@ -33,3 +33,6 @@
 @import "block-product-text/style";
 @import "product-use-carousel/style";
 @import "background-page-product/style";
+@import "aside-category-carousel/style";
+@import "trade-marks/style";
+@import "background-page/style";
