--- a/_frontend/blocks/tm-carousel/style.scss
+++ b/_frontend/blocks/tm-carousel/style.scss
@@ -1,9 +1,9 @@
 .tm-carousel {
     text-align: center;
     &__title {
-        margin: 63px auto 60px;
+        margin: 58px auto 55px;
         font-size: 24px;
-        line-height: 1.5;
+        line-height: 30px;
         font-weight: 700;
     }
     &__carousel {
