--- a/css/style.css
+++ b/css/style.css
@@ -2847,6 +2847,8 @@ input[type="text"]:focus {
 
 .product-pagination {
   padding: 50px 0 75px; }
+  .product-pagination_padding {
+    padding-top: 0; }
   .product-pagination__button {
     text-align: right; }
     .product-pagination__button .button-cheese span {
@@ -2885,13 +2887,15 @@ input[type="text"]:focus {
     .product-pagination__pagination a.product-pagination__pagination__elem-deactive:hover {
       color: #f6d44d;
       background-color: #fff; }
+    .product-pagination__pagination_center {
+      text-align: center; }
 
 .tm-carousel {
   text-align: center; }
   .tm-carousel__title {
-    margin: 63px auto 60px;
+    margin: 58px auto 55px;
     font-size: 24px;
-    line-height: 1.5;
+    line-height: 30px;
     font-weight: 700; }
   .tm-carousel__carousel {
     margin: 30px auto 60px; }
@@ -3331,3 +3335,114 @@ input[type="text"]:focus {
 @media only screen and (max-width: 1600px) {
   .background-page-product .milk {
     display: none; } }
+
+.aside-category-carousel .tm-carousel__title {
+  margin-bottom: 50px; }
+
+.aside-category-carousel .product__category__item__images {
+  width: auto;
+  height: auto;
+  padding: 12px 0; }
+  .aside-category-carousel .product__category__item__images img {
+    height: 95px; }
+
+.aside-category-carousel .arrows--prev {
+  top: -35px; }
+
+.aside-category-carousel .arrows--next {
+  bottom: -35px; }
+
+.trade-marks {
+  text-align: center; }
+  .trade-marks__item {
+    display: inline-block;
+    vertical-align: bottom;
+    margin-right: -4px;
+    margin-bottom: 75px;
+    width: 25%; }
+    @media only screen and (max-width: 1200px) {
+      .trade-marks__item {
+        width: 33%; } }
+    @media only screen and (max-width: 992px) {
+      .trade-marks__item {
+        width: 50%; } }
+    .trade-marks__item__card {
+      height: 125px;
+      position: relative; }
+      .trade-marks__item__card__img {
+        height: 90px;
+        position: relative; }
+        .trade-marks__item__card__img img {
+          position: absolute;
+          top: 50%;
+          left: 50%;
+          -webkit-transform: translate(-50%, -50%);
+              -ms-transform: translate(-50%, -50%);
+                  transform: translate(-50%, -50%); }
+      .trade-marks__item__card__title {
+        font-size: 18px;
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        right: 0; }
+
+.background-page {
+  position: relative; }
+  .background-page__tomat_brand {
+    position: absolute;
+    z-index: -1;
+    left: 0;
+    top: -50px;
+    width: 298px;
+    height: 566px;
+    background: url("../images/background/tomat.png") no-repeat; }
+    @media only screen and (max-width: 1680px) {
+      .background-page__tomat_brand {
+        display: none; } }
+  .background-page__block-left-top_brand {
+    position: absolute;
+    z-index: -2;
+    left: 0px;
+    top: 490px;
+    width: 100%;
+    height: 30px;
+    -webkit-transform: skewY(20deg);
+        -ms-transform: skewY(20deg);
+            transform: skewY(20deg);
+    background-color: #f6d34b;
+    opacity: .2; }
+  .background-page__block-left-middle_brand {
+    position: absolute;
+    z-index: -2;
+    left: 0px;
+    top: 420px;
+    width: 140px;
+    height: 170px;
+    -webkit-transform: skewY(20deg);
+        -ms-transform: skewY(20deg);
+            transform: skewY(20deg);
+    background-color: #f6d34b;
+    opacity: .2; }
+  .background-page__block-right_brand {
+    position: absolute;
+    z-index: -2;
+    right: 0px;
+    top: 220px;
+    width: 370px;
+    height: 420px;
+    -webkit-transform: skewY(20deg);
+        -ms-transform: skewY(20deg);
+            transform: skewY(20deg);
+    background-color: #f6d34b;
+    opacity: .2; }
+  .background-page__cheese-right_brand {
+    position: absolute;
+    z-index: -1;
+    right: 0;
+    top: 486px;
+    width: 392px;
+    height: 562px;
+    background: url("../images/background/cheese-green.png") no-repeat; }
+    @media only screen and (max-width: 1660px) {
+      .background-page__cheese-right_brand {
+        display: none; } }
