--- a/_frontend/blocks/style.scss
+++ b/_frontend/blocks/style.scss
@@ -36,3 +36,4 @@
 @import "aside-category-carousel/style";
 @import "trade-marks/style";
 @import "background-page/style";
+@import "text-brand/style";
