--- a/_frontend/blocks/background-page/style.scss
+++ b/_frontend/blocks/background-page/style.scss
@@ -67,4 +67,24 @@
             }
         }
     }
+    &__top {
+        position: absolute;
+        top: -225px;
+        left: 0;
+        right: 0;
+        z-index: -1;
+        width: 100%;
+        height: 434px;
+        background: url('../images/background/top.png') no-repeat center;
+    }
+    &__bottom {
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        z-index: -1;
+        width: 100%;
+        height: 540px;
+        background: url('../images/background/bottom.png') no-repeat center;
+    }
 }
