--- a/_frontend/blocks/product-pagination/style.scss
+++ b/_frontend/blocks/product-pagination/style.scss
@@ -2,6 +2,9 @@
     padding: 50px 0 75px;
     &_padding {
         padding-top: 0;
+        &-20-65 {
+            padding: 20px 0 65px;
+        }
     }
     &__button {
         text-align: right;
