--- a/_frontend/blocks/product-use-carousel/style.scss
+++ b/_frontend/blocks/product-use-carousel/style.scss
@@ -1,8 +1,22 @@
 .product-use-carousel {
     margin-top: 50px;
+    &_margin-bottom {
+        margin-bottom: 90px;
+    }
+    &__wrap {
+        float: left;
+        width: 25%;
+        @include media(xl) {
+            width: 50%;
+        }
+        @include media(md) {
+            width: 100%;
+        }
+    }
     &__carousel {
         padding: 15px 7px;
-        width: 274px;
+        max-width: 288px;
+        margin: auto;
         &__item {
             height: 356px;
             border-radius: 10px;
