--- a/_frontend/blocks/slider/style.scss
+++ b/_frontend/blocks/slider/style.scss
@@ -7,7 +7,13 @@
         overflow: hidden;
         border-radius: 0 0 50% 50% / 0 0 30px 30px;
     }
-    
+    &__img-brand {
+        position: absolute;
+        bottom: -67px;
+        left: 50%;
+        transform: translateX(-50%);
+    }
+
     &__item {
         width: 100%;
         min-height: 466px;
@@ -23,8 +29,8 @@
         -ms-flex-align: end;
         align-items: flex-end;
         padding: 150px 0 50px;
-        
-        @include media(lg){
+
+        @include media(lg) {
             padding-top: 150px
         }
 
@@ -34,11 +40,11 @@
             border: 10px solid #fdd439;
             border-radius: 10px;
             color: #fff;
-            
+
             @include media(lg) {
                 max-width: none;
             }
-            
+
             p {
                 font-size: 15px;
             }
@@ -54,7 +60,7 @@
             display: inline-block;
             margin-right: 40px;
             margin-bottom: 30px;
-            @include media(lg){
+            @include media(lg) {
                 margin-right: 0
             }
         }
@@ -68,7 +74,7 @@
         transform: translatex(-50%);
         bottom: -7.5px;
         overflow: hidden;
-        
+
         li {
             display: block;
             float: left;
