--- a/css/style.css
+++ b/css/style.css
@@ -1543,6 +1543,13 @@ input[type="text"]:focus {
     overflow: hidden;
     -webkit-border-radius: 0 0 50% 50% / 0 0 30px 30px;
             border-radius: 0 0 50% 50% / 0 0 30px 30px; }
+  .slider__img-brand {
+    position: absolute;
+    bottom: -67px;
+    left: 50%;
+    -webkit-transform: translateX(-50%);
+        -ms-transform: translateX(-50%);
+            transform: translateX(-50%); }
   .slider__item {
     width: 100%;
     min-height: 466px;
@@ -2795,6 +2802,11 @@ input[type="text"]:focus {
   @media only screen and (max-width: 992px) {
     .products-block {
       padding-top: 0; } }
+  .products-block__title {
+    font-size: 40px;
+    font-weight: 700;
+    letter-spacing: 0.4px;
+    margin-bottom: 5px; }
   .products-block__wrap-item {
     height: 328px;
     position: relative;
@@ -2857,6 +2869,8 @@ input[type="text"]:focus {
   padding: 50px 0 75px; }
   .product-pagination_padding {
     padding-top: 0; }
+    .product-pagination_padding-20-65 {
+      padding: 20px 0 65px; }
   .product-pagination__button {
     text-align: right; }
     .product-pagination__button .button-cheese span {
@@ -3016,10 +3030,20 @@ input[type="text"]:focus {
   @media only screen and (max-width: 758px) {
     .wrap-search {
       padding-top: 100px; } }
+  .wrap-search_one-brand {
+    padding-top: 0px; }
 
 .bread-crumbs {
   display: inline-block;
   max-width: 580px; }
+  .bread-crumbs_return {
+    margin-top: 20px; }
+    .bread-crumbs_return li:before {
+      content: "<";
+      display: inline-block;
+      width: 9px;
+      height: 14px;
+      margin-right: 10px; }
   .bread-crumbs ul li {
     display: inline-block;
     color: #707070;
@@ -3202,9 +3226,21 @@ input[type="text"]:focus {
 
 .product-use-carousel {
   margin-top: 50px; }
+  .product-use-carousel_margin-bottom {
+    margin-bottom: 90px; }
+  .product-use-carousel__wrap {
+    float: left;
+    width: 25%; }
+    @media only screen and (max-width: 1200px) {
+      .product-use-carousel__wrap {
+        width: 50%; } }
+    @media only screen and (max-width: 758px) {
+      .product-use-carousel__wrap {
+        width: 100%; } }
   .product-use-carousel__carousel {
     padding: 15px 7px;
-    width: 274px; }
+    max-width: 288px;
+    margin: auto; }
     .product-use-carousel__carousel__item {
       height: 356px;
       -webkit-border-radius: 10px;
@@ -3454,3 +3490,33 @@ input[type="text"]:focus {
     @media only screen and (max-width: 1660px) {
       .background-page__cheese-right_brand {
         display: none; } }
+  .background-page__top {
+    position: absolute;
+    top: -225px;
+    left: 0;
+    right: 0;
+    z-index: -1;
+    width: 100%;
+    height: 434px;
+    background: url("../images/background/top.png") no-repeat center; }
+  .background-page__bottom {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    z-index: -1;
+    width: 100%;
+    height: 540px;
+    background: url("../images/background/bottom.png") no-repeat center; }
+
+.text-brand {
+  font-size: 18px;
+  font-weight: 600;
+  line-height: 24px;
+  letter-spacing: 0.18px; }
+  @media only screen and (max-width: 992px) {
+    .text-brand {
+      margin-bottom: 40px; } }
+  .text-brand__link a:hover {
+    color: inherit;
+    border-bottom: 2px solid #f6d34b; }
